--- a/examples/browser-usage.html
+++ b/examples/browser-usage.html
@@ -98,8 +98,8 @@
             <input type="text" id="secretKey" placeholder="输入你的 Secret Key（创思控制台获取）" />
         </div>
 
-        <label for="strategyKey">策略标识</label>
-        <input type="text" id="strategyKey" placeholder="输入策略 key（创思控制台获取）" />
+        <label for="strategyId">策略标识</label>
+        <input type="text" id="strategyId" placeholder="输入策略 key（创思控制台获取）" />
 
         <label for="content">检测内容</label>
         <input type="text" id="content" value="你好，世界！" placeholder="输入需要检测的内容" />
@@ -133,7 +133,7 @@
             const apiKey = document.getElementById("apiKey").value.trim();
             const accessKey = document.getElementById("accessKey").value.trim();
             const secretKey = document.getElementById("secretKey").value.trim();
-            const strategyKey = document.getElementById("strategyKey").value.trim();
+            const strategyId = document.getElementById("strategyId").value.trim();
             const content = document.getElementById("content").value.trim();
             const output = document.getElementById("output");
 
@@ -158,7 +158,7 @@
 
             try {
                 const result = await client.inputGuardrail({
-                    strategyKey: strategyKey || "default_strategy",
+                    strategyId: strategyId || "default_strategy",
                     content: content,
                 });
 
